<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tvNo"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/number"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/tvDistance"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/distance"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/tvReducer"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/reducer"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/tvPositional"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/positional"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/tvDifficulty"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/difficulty"
            android:textStyle="bold"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="30"
        android:id="@+id/listView"
        android:layout_marginTop="5dp">
    </ListView>

</LinearLayout>